2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added BtSeederStateChoke::PeerEntry::swap(). Also added
	non-member swap for it, which is friend function for
	BtSeederStateChoke because PeerEntry is private.
	* src/BtSeederStateChoke.cc
	* src/BtSeederStateChoke.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added BtLeecherStateChoke::PeerEntry::swap(). Also added
	non-member swap for it, which is friend function for
	BtLeecherStateChoke because PeerEntry is private.
	* src/BtLeecherStateChoke.cc
	* src/BtLeecherStateChoke.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added CookieStorage::DomainEntry::swap(). Also added non-member
	swap for it.
	* src/CookieStorage.cc
	* src/CookieStorage.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made LogFactory::logger_ as SharedHandle<Logger> to make dtor of
	Logger called at the program exit.  Rewritten A2_LOG_* macro and
	moved them to LogFactory.h
	* src/LogFactory.cc
	* src/LogFactory.h
	* src/Logger.cc
	* src/Logger.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed cuid as cuid_t in DefaultBtMessageDispatcher.
	* src/DefaultBtMessageDispatcher.cc
	* src/DefaultBtMessageDispatcher.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use format specifier %lld for cuid_t. Defined cuid_t as long long
	int instead of int64_t, since g++ complains int64_t is not
	suitable for %lld.

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced StringFormat with fmt

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten Logger interface. Logger now writes source file name and
	line number in log file.

2010-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made DHTBucketTreeNode non-copyable.
	* src/DHTBucketTree.h

2010-11-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
