@@ -661,7 +661,7 @@ downloading a file like BitTorrent.</p></div>
 </p>
 </dd>
 <dt class="hdlist1">
-<a id="aria2_optref_continue"></a><strong>-c</strong>, <strong>--continue</strong>
+<a id="aria2_optref_continue"></a><strong>-c</strong>, <strong>--continue</strong>[=<em>true</em>|<em>false</em>]
 </dt>
 <dd>
 <p>
@@ -820,7 +820,7 @@ then you get HTTP proxy "http://proxy" with user "user" and password
 </p>
 </dd>
 <dt class="hdlist1">
-<a id="aria2_optref_no_netrc"></a><strong>-n</strong>, <strong>--no-netrc</strong>
+<a id="aria2_optref_no_netrc"></a><strong>-n</strong>, <strong>--no-netrc</strong>[=<em>true</em>|<em>false</em>]
 </dt>
 <dd>
 <p>
@@ -1344,7 +1344,7 @@ writes the piece to the appropriate files.</td>
 </div>
 <div class="dlist"><dl>
 <dt class="hdlist1">
-<a id="aria2_optref_show_files"></a><strong>-S</strong>, <strong>--show-files</strong>
+<a id="aria2_optref_show_files"></a><strong>-S</strong>, <strong>--show-files</strong>[=<em>true</em>|<em>false</em>]
 </dt>
 <dd>
 <p>
@@ -2042,7 +2042,7 @@ writes the piece to the appropriate files.</td>
 </p>
 </dd>
 <dt class="hdlist1">
-<a id="aria2_optref_daemon"></a><strong>-D</strong>, <strong>--daemon</strong>
+<a id="aria2_optref_daemon"></a><strong>-D</strong>, <strong>--daemon</strong>[=<em>true</em>|<em>false</em>]
 </dt>
 <dd>
 <p>
@@ -2306,7 +2306,7 @@ are also allocated if they share the same piece.</td>
 </p>
 </dd>
 <dt class="hdlist1">
-<a id="aria2_optref_no_conf"></a><strong>--no-conf</strong>
+<a id="aria2_optref_no_conf"></a><strong>--no-conf</strong>[=<em>true</em>|<em>false</em>]
 </dt>
 <dd>
 <p>
@@ -4708,7 +4708,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2010-10-31 17:52:01 JST
+Last updated 2010-11-23 22:54:53 JST
 </div>
 </div>
 </body>
